syntax = "proto3";

import "query.proto";

package loot.protobuf;

message FilterState {
  string name = 1;
  bool state = 2;
}

message LoadOrder {
  repeated string plugins = 1;
}

message EditorState {
  bool apply_edits = 1;
  PluginMetadata metadata = 2;
}

message Content {
  repeated Plugin plugins = 1;
  repeated SimpleMessage messages = 2;
}

message Request {
  string name = 1;
  oneof payload {
    string target_name = 2;
    FilterState filter = 3;
    LoadOrder plugin_names = 4;
    LootSettings settings = 5;
    EditorState editor_state = 7;
    Content content = 6;
  }
}
